--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "fabric": "^3.3.2",
     "gsap": "^2.1.3",
     "hammerjs": "^2.0.8",
+    "lodash": "^4.17.15",
     "svg.js": "^2.7.1"
   },
   "devDependencies": {
