--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "start": "parcel src/index.html"
   },
   "dependencies": {
+    "@svgdotjs/svg.filter.js": "^3.0.6",
+    "@svgdotjs/svg.js": "^3.0.13",
     "events": "^3.0.0",
     "fabric": "^3.3.2",
     "gsap": "^2.1.3",
     "hammerjs": "^2.0.8",
-    "lodash": "^4.17.15",
-    "svg.js": "^2.7.1"
+    "lodash": "^4.17.15"
   },
   "devDependencies": {
     "parcel-bundler": "^1.12.3"
