--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "@svgdotjs/svg.filter.js": "^3.0.6",
-    "@svgdotjs/svg.js": "^3.0.13",
+    "@svgdotjs/svg.js": "3.0.12",
+    "@types/events": "^3.0.0",
     "events": "^3.0.0",
     "fabric": "^3.3.2",
     "gsap": "^2.1.3",
@@ -16,6 +17,7 @@
     "lodash": "^4.17.15"
   },
   "devDependencies": {
-    "parcel-bundler": "^1.12.3"
+    "parcel-bundler": "^1.12.3",
+    "typescript": "^3.5.3"
   }
 }
