feat: Add style

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lodash": "^4.17.15"
   },
   "devDependencies": {
+    "less": "^3.9.0",
     "parcel-bundler": "^1.12.3",
     "typescript": "^3.5.3"
   }
