--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "dependencies": {
     "@svgdotjs/svg.filter.js": "^3.0.6",
     "@svgdotjs/svg.js": "3.0.12",
+    "events": "^3.0.0",
     "lodash": "^4.17.15"
   },
   "devDependencies": {
+    "@types/events": "^3.0.0",
     "less": "^3.9.0",
     "parcel-bundler": "^1.12.3",
     "typescript": "^3.5.3"
