--- a/package.json
+++ b/package.json
@@ -4,16 +4,25 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "parcel public/index.html"
+    "start": "webpack-dev-server --config webpack.config.js"
   },
   "dependencies": {
     "events": "^3.0.0",
     "lodash": "^4.17.15"
   },
   "devDependencies": {
+    "@babel/core": "^7.5.5",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/preset-typescript": "^7.3.3",
     "@types/events": "^3.0.0",
+    "babel-loader": "^8.0.6",
+    "css-loader": "^3.2.0",
     "less": "^3.9.0",
-    "parcel-bundler": "^1.12.3",
-    "typescript": "^3.5.3"
+    "less-loader": "^5.0.0",
+    "style-loader": "^1.0.0",
+    "typescript": "^3.5.3",
+    "webpack": "^4.39.2",
+    "webpack-cli": "^3.3.7",
+    "webpack-dev-server": "^3.8.0"
   }
 }
