--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "include": ["src", "public"],
+  "exclude": ["node_modules"],
   "compilerOptions": {
     "rootDir": ".",
     "moduleResolution": "classic",
