--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,31 @@
 {
-  "include": ["src", "public"],
+  "include": ["packages/global.d.ts", "packages/*/src"],
   "exclude": ["node_modules"],
   "compilerOptions": {
+    "baseUrl": ".",
+    "outDir": "dist",
+    "sourceMap": false,
+    "target": "esnext",
+    "module": "esnext",
+    "moduleResolution": "node",
+    "allowJs": false,
+    "noUnusedLocals": true,
+    "strictNullChecks": true,
+    "noImplicitAny": true,
+    "noImplicitThis": true,
+    "experimentalDecorators": true,
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
+    "lib": ["esnext", "dom"],
+    // "types": ["jest", "puppeteer", "node"],
     "rootDir": ".",
-    "moduleResolution": "classic",
-    "target": "es6"
+    "paths": {
+      "@x/core": ["packages/core/src"],
+      "@x/fields": ["packages/fields/src"],
+      "@x/generator": ["packages/generator/src"],
+      "@x/plugins": ["packages/plugins/src"],
+      "@x/renderer": ["packages/renderer/src"],
+      "@x/shared": ["packages/shared/src"]
+    }
   }
 }
