--- a/package.json
+++ b/package.json
@@ -3,23 +3,31 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
-    "start": "webpack-dev-server --config webpack.config.js"
+    "start": "webpack-dev-server --config webpack.config.js",
+    "test": "jest"
   },
   "dependencies": {
-    "events": "^3.0.0",
-    "lodash": "^4.17.15"
+    "events": "^3.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/preset-typescript": "^7.3.3",
     "@types/events": "^3.0.0",
+    "@types/jest": "^24.0.23",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.2.0",
+    "jest": "^24.9.0",
+    "lerna": "^3.19.0",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
     "style-loader": "^1.0.0",
+    "ts-jest": "^24.2.0",
     "typescript": "^3.5.3",
     "webpack": "^4.39.2",
     "webpack-cli": "^3.3.7",
