--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "temp",
+  "name": "blocks-program",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
     "test": "jest"
   },
-  "dependencies": {
-    "events": "^3.0.0"
+  "engines": {
+    "node": ">=12.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.7.4",
@@ -15,7 +15,6 @@
     "@babel/plugin-proposal-optional-chaining": "^7.7.4",
     "@babel/preset-env": "^7.7.4",
     "@babel/preset-typescript": "^7.7.4",
-    "@types/events": "^3.0.0",
     "@types/jest": "^24.0.23",
     "jest": "^24.9.0",
     "lerna": "^3.19.0",
