--- a/.babelrc
+++ b/.babelrc
@@ -12,6 +12,12 @@
   ],
   "plugins": [
     "@babel/plugin-proposal-optional-chaining",
-    "@babel/plugin-proposal-nullish-coalescing-operator"
+    "@babel/plugin-proposal-nullish-coalescing-operator",
+    [
+      "@babel/plugin-syntax-decorators",
+      {
+        "decoratorsBeforeExport": true
+      }
+    ]
   ]
 }
