--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     "strictNullChecks": true,
     "noImplicitAny": true,
     "noImplicitThis": true,
-    "experimentalDecorators": true,
+    "experimentalDecorators": false,
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "lib": [
