--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@babel/plugin-syntax-decorators": "^7.7.4",
     "@babel/preset-env": "^7.7.4",
     "@babel/preset-typescript": "^7.7.4",
+    "@rollup/plugin-replace": "^2.3.0",
     "@types/jest": "^24.0.23",
     "jest": "^24.9.0",
     "rollup": "^1.27.9",
