--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@babel/preset-typescript": "^7.7.4",
     "@rollup/plugin-replace": "^2.3.0",
     "@types/jest": "^24.0.23",
+    "csstype": "^2.6.8",
     "jest": "^24.9.0",
     "rollup": "^1.27.9",
     "rollup-plugin-babel": "^4.3.3",
