chore: update typedoc config

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-  "typescript.tsdk": "node_modules\\typescript\\lib"
+  "typescript.tsdk": "node_modules\\typescript\\lib",
+  "json.schemas": [
+    {
+      "fileMatch": ["typedoc.json"],
+      "url": "http://json.schemastore.org/typedoc"
+    }
+  ]
 }
