--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@babel/preset-typescript": "^7.8.3",
     "@rollup/plugin-replace": "^2.3.1",
     "@types/jest": "^25.1.4",
+    "@types/node": "^13.9.2",
     "csstype": "^2.6.9",
     "jest": "^25.1.0",
     "rollup": "^2.0.6",
