--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,6 @@
   "semi": false,
   "arrowParens": "always",
   "printWidth": 120,
-  "singleQuote": true
+  "singleQuote": true,
+  "trailingComma": "none"
 }
