perf: 修复辅助函数中的 context

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,8 +10,8 @@
     "baseUrl": ".",
     "outDir": "dist",
     "sourceMap": false,
-    "target": "esnext",
-    "module": "esnext",
+    "target": "ES2015",
+    "module": "ES2015",
     "moduleResolution": "node",
     "allowJs": false,
     "noUnusedLocals": true,
