--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,38 +1,9 @@
 {
-  "include": [
-    "src",
-  ],
-  "exclude": [
-    "node_modules"
-  ],
+  "include": ["src"],
   "compilerOptions": {
-    "rootDir": ".",
-    "baseUrl": ".",
-    "outDir": "dist",
-    "sourceMap": false,
-    "target": "ES2015",
-    "module": "ES2015",
-    "moduleResolution": "node",
-    "allowJs": false,
-    "noUnusedLocals": true,
-    "strictNullChecks": true,
-    "noImplicitAny": true,
-    "noImplicitThis": true,
-    "experimentalDecorators": false,
-    "resolveJsonModule": true,
     "esModuleInterop": true,
-    "lib": [
-      "esnext",
-      "dom"
-    ],
-    "types": [
-      "jest",
-      "node"
-    ],
-    "paths": {
-      "@/*": [
-        "src/*"
-      ]
-    }
+    "jsx": "preserve",
+    "lib": ["esnext", "dom"],
+    "types": ["jest", "node"]
   }
 }
