chore: 调整 ts 文件，以适应 vite

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,10 @@
 {
   "include": ["src"],
   "compilerOptions": {
+    "moduleResolution": "node",
     "esModuleInterop": true,
+    "downlevelIteration": true,
+    "target": "esnext",
     "jsx": "preserve",
     "lib": ["esnext", "dom"],
     "types": ["jest", "node"]
