--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/node": "^14.0.13",
     "csstype": "^2.6.9",
     "jest": "^26.0.1",
+    "less": "^3.12.2",
     "rollup": "^2.0.6",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-terser": "^6.1.0",
