--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,6 @@
   "arrowParens": "always",
   "printWidth": 120,
   "singleQuote": true,
-  "trailingComma": "none"
+  "trailingComma": "none",
+  "jsxSingleQuote": true
 }
