chore: 整理 playground 代码

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": ["src"],
+  "include": ["src", "playground"],
   "compilerOptions": {
     "moduleResolution": "node",
     "esModuleInterop": true,
