chore: 修复打包 base 路径

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,7 +47,7 @@ jobs:
         run: |
           yarn
           yarn build
-          mv ./dist/* temp
+          rsync -a dist/* temp
 
       - name: Commit and push
         run: |
