--- a/package.json
+++ b/package.json
@@ -11,16 +11,17 @@
     "docs": "typedoc"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.16",
-    "@types/node": "^14.14.10",
+    "@types/jest": "^26.0.20",
+    "@types/node": "^14.14.20",
+    "@vitejs/plugin-vue-jsx": "^1.0.1",
     "jest": "^26.6.3",
-    "less": "^3.12.2",
+    "less": "^4.1.0",
     "ts-jest": "^26.4.4",
-    "typedoc": "^0.19.2",
-    "typescript": "^4.1.2",
-    "vite": "^1.0.0-rc.13"
+    "typedoc": "^0.20.14",
+    "typescript": "^4.1.3",
+    "vite": "^2.0.0-beta.21"
   },
   "dependencies": {
-    "vue": "^3.0.4"
+    "vue": "^3.0.5"
   }
 }
