--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
     "moduleResolution": "node",
     "esModuleInterop": true,
     "downlevelIteration": true,
-    "target": "esnext",
+    "target": "ESNext",
+    "module": "ESNext",
     "jsx": "preserve",
     "lib": ["esnext", "dom"],
     "types": ["jest", "node"]
