--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
   },
   "devDependencies": {
     "@types/jest": "^26.0.20",
-    "@types/node": "^14.14.20",
-    "@vitejs/plugin-vue-jsx": "^1.0.1",
+    "@types/node": "^14.14.22",
+    "@vitejs/plugin-vue-jsx": "^1.0.2",
+    "csstype": "^3.0.6",
     "jest": "^26.6.3",
     "less": "^4.1.0",
     "ts-jest": "^26.4.4",
-    "typedoc": "^0.20.14",
+    "typedoc": "^0.20.19",
     "typescript": "^4.1.3",
-    "vite": "^2.0.0-beta.21"
+    "vite": "^2.0.0-beta.52"
   },
   "dependencies": {
     "vue": "^3.0.5"
