--- a/package.json
+++ b/package.json
@@ -12,17 +12,17 @@
   },
   "devDependencies": {
     "@types/jest": "^26.0.20",
-    "@types/node": "^14.14.22",
+    "@types/node": "^15.6.1",
     "@vitejs/plugin-vue-jsx": "^1.0.2",
     "csstype": "^3.0.6",
-    "jest": "^26.6.3",
+    "jest": "^27.0.3",
     "less": "^4.1.0",
-    "ts-jest": "^26.4.4",
+    "ts-jest": "^27.0.2",
     "typedoc": "^0.20.19",
     "typescript": "^4.1.3",
-    "vite": "^2.0.0-beta.52"
+    "vite": "^2.3.4"
   },
   "dependencies": {
-    "vue": "^3.0.5"
+    "vue": "^3.0.11"
   }
 }
