--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
       "fileMatch": ["typedoc.json"],
       "url": "https://typedoc.org/schema.json"
     }
-  ]
+  ],
+  "editor.formatOnSave": true
 }
