--- a/package.json
+++ b/package.json
@@ -7,22 +7,23 @@
   "scripts": {
     "build": "vite build && yarn docs",
     "start": "vite",
-    "test": "jest",
+    "test": "vitest run",
     "docs": "typedoc"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.20",
-    "@types/node": "^15.6.1",
-    "@vitejs/plugin-vue-jsx": "^1.0.2",
-    "csstype": "^3.0.6",
-    "jest": "^27.0.3",
-    "less": "^4.1.0",
-    "ts-jest": "^27.0.2",
-    "typedoc": "^0.20.19",
-    "typescript": "^4.1.3",
-    "vite": "^2.3.4"
+    "@types/node": "^18.0.4",
+    "@vitejs/plugin-vue-jsx": "^2.0.0",
+    "csstype": "^3.1.0",
+    "happy-dom": "^6.0.3",
+    "jsdom": "^20.0.0",
+    "less": "^4.1.3",
+    "typedoc": "^0.23.7",
+    "typescript": "^4.7.4",
+    "vite": "^3.0.0",
+    "vitest": "^0.18.0"
   },
   "dependencies": {
-    "vue": "^3.0.11"
+    "@0x-jerry/utils": "^1.8.2",
+    "vue": "^3.2.37"
   }
 }
